# workplace_ops_agent

./: .gitignore  ACTION_PLAN.md  AUDIT_INDEX.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  Dockerfile  README.md  README_PHASE2.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  anti_exploit.py  app.py  env.py  graders.py  models.py  reward.py  tasks.py  validation.py
